# Geant4_PoGOSim

./: CMakeLists.txt  History  PoGOSim.cc  README.md  README.txt  cmake.sh  env_setup.sh
analysis/: G4data.h  G4dataAnalysis  G4dataAnalysis.cc  autoTrigAna.sh  makefile
analysis/Calibrations/: BGO_final.root  Fast_final.root  PureFastSpectrum.root  PureFastSpectrum_rmAfterPulse.root  PureFastSpectrum_rmAfterPulse_ProperPileUp.root  PureFastSpectrum_rmAfterPulse_withPileUp.root  PureSlowSpectrum_rmAfterPulse.root  SDCSpectrum_rmAfterPulse.root
analysis/Calibrations/March2016_STCKHLM/: 2hitDistribution_DeltaI2.root  2hitDistribution_DeltaI2Unit28.root  2hitDistribution_DeltaI2Unit28rmSAS.root  2hitSpectrum160330rmAfterPulse50.root  Ring1_2hitSpectrum_DeltaI2.root  Unit0_1hitSpectrum_rmAfterPulse30.root
analysis/inputs/: thresholds160317.txt
analysis/results/Am241_Central/: G4angulardistribution2hits.root  G4distribution1hit.root  G4distribution2hits.root  G4distributionNhits.root  G4eventMultiplicity.root  G4map2hits.root  G4ringDistribution2hits.root  G4spectrum1hit.root  G4spectrum2hits.root  G4spectrum3hits.root  G4spectrumNhits.root
analysis/results/Am241_unit28/: G4angulardistribution2hits.root  G4distribution1hit.root  G4distribution2hits.root  G4distributionNhits.root  G4eventMultiplicity.root  G4map2hits.root  G4ringDistribution2hits.root  G4spectrum1hit.root  G4spectrum2hits.root  G4spectrum3hits.root  G4spectrumNhits.root
analysis/results/ScatteredAm241_Central/: G4angulardistribution2hits.root  G4distribution1hit.root  G4distribution2hits.root  G4distributionNhits.root  G4eventMultiplicity.root  G4map2hits.root  G4ringDistribution2hits.root  G4spectrum1hit.root  G4spectrum2hits.root  G4spectrum3hits.root  G4spectrumNhits.root
analysis/results/TriggerOptimization/: TriggerOptimization.qti~
include/: DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  StructureConstruction.hh  TrackerHit.hh  TrackerSD.hh
mac/: 6coll.mac  Am241_2016.mac  Crab.mac  CygnusX1.mac  PoGO_float.mac  area.mac  autoEnergy.sh  autoFoV.sh  autoLength.sh  autoOffaxisNP.sh  neutronBg13th_12.mac  rotation.mac  rotation_Crab.mac  rotation_CygnusX1.mac  rotation_float.mac  rotation_neutronBg13th_12.mac  run1.mac  scatterpiece.mac  scatterpiecerotation.mac  test.mac  vis.mac  vis0.mac
src/: DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  StructureConstruction.cc  TrackerHit.cc  TrackerSD.cc
(+12 files in other folders)
